fix width of videos on small screens

--- a/site/src/pages/questPage.css
+++ b/site/src/pages/questPage.css
@@ -104,5 +104,9 @@
         width: 30%;
     }
 
+    .mediaVideos{
+        width: 80% !important;
+    }
+
 }
 
